<resources>
    <string name="app_name">旅信</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="travelrely_text1">Copyright © 2013-2015 TravelRely All Right Reserved</string>
    <string name="travelrely_text2">旅信顺捷  版权所有</string>
    <string name="home">首页</string>
    <string name="tab_one">通话记录</string>
    <string name="tabContact">通讯录</string>
    <string name="tabCommunication">通信</string>
        <string name="mealOneNote6">订单%1$d天起订</string>
            <string name="friendly_prompt">尊敬的用户，为避免给您的使用带来不必要的国内漫游费用支出及发生投诉，请确认您使用的蓝牙设备中SIM卡的资费套餐是否开通免国内漫游</string>
    <string name="tabMsg">消息</string>
    <string name="tabShop">商店</string>
    <string name="tabMe">我</string>
     <string name="nettxt">网络通信</string>
    <string name="myTra">我的旅信</string>
    <string name="select_comtact">选择联系人</string>
    <string name="imei_wrong">IMEI号为空或者不够15位，请重新输入</string>
    <string name="back">返回</string>
    <string name="send_msg">发送</string>
    <string name="photo">照片</string>
    <string name="shoot">拍摄</string>
    <string name="location">位置</string>
    <string name="clock">闹钟</string>
    <string name="travelrely">旅信</string>
    <string name="purnote">購買須知</string>
    <string name="search">搜索</string>
    <string name="all">全部</string>
    <string name="baseinfor">基本信息</string>
    <string name="contact_detail">详细资料</string>
    <string name="edit">编辑</string>
    <string name="modify">修改</string>
    <string name="abroad_num">境外号码</string>
    <string name="buymore">多买几张</string>
    <string name="add_friend">加为好友</string>
    <string name="noshipment">收货人地址不能为空</string>
    <string name="add_friend_aready">已添加你为好友</string>
    <string name="add_friend_aready_1">已添加</string>
    <string name="clear">清空</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>
    <string name="add_contact">添加联系人</string>
    <string name="input_num">请输入手机号码</string>
    <string name="input_name">名字</string>
    <string name="buy_meal">购买套餐</string>
    <string name="call">拨号</string>
    <string name="call_1">呼叫</string>
    <string name="contact_info">联系人信息</string>
    <string name="call_out">拨出电话</string>
    <string name="has_cancel">已取消</string>
    <string name="send_msg_1">发送信息</string>
    <string name="create_new_contact">创建新联系人</string>
    <string name="add_contact_zoo">添加到现有联系人</string>
    <string name="skip">跳过</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="password_b">密码（已发送至您的手机）</string>
    <string name="forgot_password">忘记密码</string>
    <string name="next">下一步</string>
    <string name="china">中国（+86）</string>
    <string name="read_and_yes">阅读并同意</string>
    <string name="iagree">我已知悉</string>
    <string name="service">服务条款</string>
    <string name="send_phone_num">验证手机号：</string>
    <string name="input_auth_code">请输入验证码</string>
    <string name="repeat_auth_code">重发获取(60)</string>
    <string name="repeat_auth_code_1">重发获取</string>
    <string name="name">名字</string>
    <string name="finish">完成</string>
    <string name="sex">性别</string>
    <string name="set">设置</string>
    <string name="tv_yszc">隐私政策</string>
    <string name="tv_sytk">使用条款</string>
    <string name="tv_carrier_info">运营商信息</string>
    <string name="tv_help_info">帮助信息</string>
    <string name="tv_help">帮助</string>
    <string name="funIntroduce">功能介绍</string>
    <string name="tv_about">关于旅信</string>
    <string name="tv_exit">退出登录</string>
    <string name="tv_contact_us">联系我们</string>
    <string name="languageSupport">多语言环境</string>
    <string name="tv_contact_us_mail">电子邮件客户服务</string>
    <string name="tv_contact_us_call">致电客户服务</string>
    <string name="tv_contact_us_weChat">微信客户服务</string>
    <string name="tv_contact_us_web">对该程序提供反馈</string>
    <string name="tv_retrieve_assword">找回密码</string>
    <string name="zy_input_num">输入验证码</string>
    <string name="test_minute">100分钟</string>
    <string name="dataFlow">数据流量</string>
    <string name="localVoice">本地语音</string>
    <string name="interVoice">国际长途</string>
    <string name="test_yyth">通话时长</string>
    <string name="tv_ldzjtx">来电 转接/提醒</string>
    <string name="call_set">来电 转接/提醒 设置</string>
    <string name="tv_check_order">查看我的订单</string>
    <string name="callFwdSetVip">VIP直通功能</string>
    <string name="callFwdSetSecretary">个人小秘书</string>
    <string name="secretaryPrice">（1元/天）</string>
    <string name="call_set_com">旅信留言通知</string>
    <string name="call_set_null">不做任何设置</string>
    <string name="callFwdSetDesc1">旅信留言通知：出行前把电话呼转到旅信服务器，当有人给你打电话时会听到旅信为你设置的留言。</string>
    <string name="callFwdSetDesc2">个人小秘书：可以编写个人留言。出行前把电话呼转到小秘书，当有人给你打电话时会听到你自己写的留言。同时，小秘书会把主叫号码发旅信消息到你的手机哦。</string>
    <string name="callFwdSetDesc3">VIP直通功能：直接把两个国家的号码连接在一起。当有人给你打电话时能自动转接到新号码上。</string>
    <string name="test_meal_one">AT&amp;T</string>
    <string name="test_meal_two">CSL</string>
    <string name="test_meal_three">TELKOMSEL</string>
    <string name="TrueMoveH">TrueMoveH</string>
    <string name="test_num_one">99.00</string>
    <string name="test_num_two">10</string>
    <string name="test_num_three">109.00</string>
    <string name="test_zhye">账户余额19.8元</string>
    <string name="test_zfbkhdzf">支付宝客户端付款</string>
    <string name="test_zfbweb">支付宝网页付款</string>
    <string name="test_zfbwyzf">网站支付-支付宝</string>
    <string name="test_wxzf">微信支付</string>
    <string name="tv_men">男</string>
    <string name="tv_women">女</string>
    <string name="tv_finished">已完成</string>
    <string name="tv_ljxf">立即续费</string>
    <string name="tv_ljfk">立即付款</string>
    <string name="buyNow">立即购买</string>
    <string name="tv_aggree_pay">确认支付</string>
    <string name="tv_pay_ok">订购成功</string>
    <string name="tv_pay_ok_1">您的套餐订购成功！</string>
    <string name="payOK2">您的订单支付成功！</string>
    <string name="tv_check_meal">查看我的套餐</string>
    <string name="tv_pay_order">支付订单</string>
    <string name="tv_change_nickname">修改昵称</string>
    <string name="tv_change_mobile">修改宿主卡号</string>
    <string name="tv_input_nickname">输入新昵称</string>
    <string name="tv_input_nickmobile">输入新宿主卡号</string>
    <string name="tv_select_s">选择省</string>
    <string name="tv_select_city">选择市</string>
    <string name="tv_select_qx">选择区/县</string>
    <string name="myOrders">我的订单</string>
    <string name="switchTrip">行程切换</string>
    <string name="orderDetails">订单详情</string>
    <string name="checkDetails">查看详情</string>
    <string name="sysSetting">系统设置</string>
    <string name="changeRingtone">修改个人秘书服务</string>
    <string name="usrPhoneNum">使用人手机号：</string>
    <string name="simType">卡类型：</string>
    <string name="simSize">卡大小：</string>
   	<string name="tv_bluetooth_to_burn_card">虚拟硬卡</string>
    <string name="localCalls">本地语音（分钟）：</string>
    <string name="iddCalls">国际长途（分钟）：</string>
    <string name="dataFlowM">数据流量（    M ）：</string>
    <string name="secretaryTime">秘书服务（天数）：</string>
    <string name="commodityPrice">商品单价（￥）：</string>
    <string name="notPaying">待付款</string>
    <string name="tv_remain_days">行程X天后开始</string>
    <string name="tv_in_service">正在使用中</string>
    <string name="tv_no_data">没有相关订单数据</string>
    <string name="tv_yuan">元</string>
    <string name="dollar">美元</string>
    <string name="baht">泰铢</string>
    <string name="rupiah">卢比</string>
    <string name="tv_login_new">立即登录</string>
    <string name="beginDate_" formatted="false">开始日期：%s</string>
    <string name="endDate_" formatted="false">结束日期：%s</string>
    <string name="dataFlow_" formatted="false">数据流量：%s</string>
    <string name="commodityNum_" formatted="false">商品数量：%s</string>
    <string name="simSize_" formatted="false">卡大小：%s</string>
    <string name="simType_" formatted="false">卡类别：%s</string>
    <string name="dest_" formatted="false">目的地：%s</string>
    <string name="btBox_" formatted="false">蓝牙盒子：%s</string>
    <string name="orderNO_" formatted="false">订单编号：%s</string>
    <string name="useDate_" formatted="false">使用日期：%s</string>
    <string name="useDays_" formatted="false">使用天数：%s</string>
    <string name="goodsAmount_" formatted="false">商品金额：%s</string>
    <string name="goodsAmount">商品金额</string>
    <string name="buy_meal_one_explain">您的本地通话内已包含VOIP电话服务，在使用旅信客户端进行跨国拨号时您可以选择资费更低的VOIP拨号服务</string>
    <string name="addToCart">加入购物车</string>
    <string name="add_money">立即续费</string>
    <string name="cardType">卡类型</string>
    <string name="purchaseTM">购买贴膜电话卡</string>
    <string name="cardTypeOne">普通硬卡</string>
    <string name="cardTypeTwo">新购贴膜卡</string>
    <string name="cardTypeThree">已有贴膜卡</string>
    <string name="tv_sim_explain_one">一次性卡：普通尺寸大小的SIM卡，不能反复使用，下次如果还要使用旅信产品需要重复购买</string>
    <string name="tv_sim_explain_three">V-SIM卡：旅信研发的超薄SIM卡，可多次重复使用，下次购买旅信产品时不需要再次购买</string>
    <string name="cardScale">卡大小</string>
    <string name="stdCard">标准卡</string>
    <string name="microCard">Micro卡</string>
    <string name="nanoCard">Nano卡</string>
    <string name="clickToAddShipAddr">点击创建收货人地址</string>
    <string name="doNotNeedShipAddr">无需收货人地址</string>
    <string name="tv_add_address">添加收货地址</string>
    <string name="tv_address">收货地址</string>
    <string name="modifyAddr">修改收货地址</string>
    <string name="tv_add_coupons">使用优惠券</string>
    <string name="tv_msg_num">身份证号码/护照号码</string>
    <string name="orderAmount">订单金额</string>
    <string name="tv_psf">配送费</string>
    <string name="tv_zj">总计</string>
    <string name="tv_ssq">省/市/县</string>
    <string name="tv_jd">地址</string>
    <string name="coupons">优惠券</string>
    <string name="tv_coupon_money">优惠价</string>
    <string name="tv_aoupons_num">输入优惠券序列号</string>
    <string name="tv_aoupons_checking">验证</string>
    <string name="tv_aoupons_apply">使用此优惠券</string>
    <string name="idInfo">身份信息</string>
    <string name="orderInfo">订单信息</string>
    <string name="tv_renew">续费</string>
    <string name="leftDays">套餐剩余时间</string>
    <string name="renewfeeDays">续费天数</string>
    <string name="renewfeeDataFlow">续费数据流量</string>
    <string name="renewfeecalls">续费通话时长</string>
    <string name="leftDataFlow">数据剩余流量</string>
    <string name="leftLocalCalls">本地通话剩余</string>
    <string name="leftIddCalls">国际长途剩余</string>
    <string name="tv_sjll">数据流量</string>
    <string name="tv_jsxx">结算信息</string>
    <string name="tv_tcsjxf">套餐时间续费</string>
    <string name="tv_sjllxf">数据流量续费</string>
    <string name="tv_bdthsy">通话时长续费</string>
    <string name="tv_province">省</string>
    <string name="tv_city">市</string>
    <string name="tv_area">区</string>
    <string name="tv_grxx">个人信息</string>
    <string name="tv_icon">头像</string>
    <string name="tv_ye">余额</string>
    <string name="tv_user_ye">账户余额:</string>
    <string name="tv_user_ye_1">账户余额付款</string>
    <string name="tv_user_yu_e">余额:</string>
    <string name="tv_cz">充值</string>
    <string name="tv_phone_num">手机号</string>
    <string name="tv_phone_user">宿主卡号</string>
    <string name="tv_xgmm">修改密码</string>
    <string name="oldPswd">旧密码</string>
    <string name="newPswd">新密码</string>
    <string name="cfmPswd">确认密码</string>
    <string name="tv_account">账号</string>
    <string name="tv_czje">充值金额</string>
    <string name="tv_ljcz">立即充值</string>
    <string name="America">美国</string>
    <string name="txt1_phonecardlist">境外流量卡招商中...</string>
    <string name="txt2_phonecardlist">欢迎加入旅信GLMS平台，服务出境国人</string>
    <string name="Hongkong">香港</string>
    <string name="Indonesia">印度尼西亚</string>
    <string name="Thailand">泰国</string>
    <string name="FriendlyHK">香港友好用户</string>
    <string name="Tuniu">途牛友好用户</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="new_version_title">更新通知</string>
    <string name="tab_reception">签到详情</string>
    <string name="tv_valid_date">截止时间：</string>
    <string name="tv_reception_check">查看签到</string>
</resources>