<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1" >

    <include layout="@layout/navigation_bar" />

    <com.travelrely.app.view.FormsArrawsBtn
        android:id="@+id/bt_rraws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/forms_text_down"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="start"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:padding="@dimen/margin_medium"
            android:singleLine="true"
            android:textColor="@color/edit_text"
            android:textSize="17sp" />

        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/cart_line"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="start"
            android:hint="@string/password"
            android:inputType="number"
            android:padding="@dimen/margin_medium"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/edit_text"
            android:textSize="17sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/check_box"
            style="@style/read_yes_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/blue_check_bt_bg"
            android:drawablePadding="5dp"
            android:text="@string/read_and_yes" />

        <TextView
            android:id="@+id/tvService"
            style="@style/forgot_password_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="17sp" >
        </Button>

        <Button
            android:id="@+id/bt_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="17sp" >
        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="注：请填入手机中的SIM卡号码或蓝牙设备中的SIM卡号码作为用户名" />

</LinearLayout>