<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_reception_to"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="3dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/reception_set_send_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/msg_state_sending" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/send_msg_type_above_right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_to_name_location_title"
                style="@style/send_msg_type_above1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tab_reception" />

            <TextView
                android:id="@+id/tv_reception_to_date"
                style="@style/send_msg_type_above2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="6.5dp"
            android:background="@drawable/send_msg_type_centre"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/reception_set_type" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingRight="5dp" >

                <TextView
                    style="@style/send_msg_type_centre1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_valid_date" />

                <TextView
                    android:id="@+id/tv_reception_to_time"
                    style="@style/send_msg_type_centre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/tv_to_reception_check"
            style="@style/send_msg_type_below1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="6.5dp"
            android:text="@string/tv_reception_check" />
    </LinearLayout>

</LinearLayout>